--- a/templates/default/_layout.twig
+++ b/templates/default/_layout.twig
@@ -55,8 +55,6 @@
 
 	<nav id="navbar" class="navbar {% if theme == 'dark' %} navbar-dark bg-dark {% else %} navbar-light bg-light {% endif %} navbar-static-top navbar-expand-md">
 		<div class="container">
-			<a class="navbar-brand" href="/"><img src="/assets/logo.png" alt="[sb]" height="32"
-					class="d-inline-block align-text-top"></a>
 			<form class="d-flex" method="GET" action="search.php">
 			<div class="input-group">
 				<input name="query" class="form-control" type="search" placeholder="{{ __("Search") }}"
@@ -66,6 +64,10 @@
 				</button>
 			</div>
 			</form>
+			<div class="navbar-nav mx-auto">
+			<a class="navbar-brand" href="/"><img src="/assets/logo.png" alt="[sb]" height="32"
+					class="d-inline-block align-text-top"></a>
+			</div>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
