--- a/templates/default/_layout.twig
+++ b/templates/default/_layout.twig
@@ -57,7 +57,7 @@
 		<div class="container">
 			<a class="navbar-brand" href="/"><img src="/assets/logo.png" alt="[sb]" height="32"
 					class="d-inline-block align-text-top"></a>
-			<form class="d-flex" method="GET" action="search.php">
+			<form method="GET" action="search.php" class="d-flex position-absolute top-50 start-50 translate-middle" style="width: 35%;">
 			<div class="input-group">
 				<input name="query" class="form-control" type="search" placeholder="{{ __("Search") }}"
 					aria-label="Search">
