--- a/templates/default/_layout.twig
+++ b/templates/default/_layout.twig
@@ -51,13 +51,31 @@
       Me when the
     </div>
   </div>
-</div>-->
+</div>--><div class="container">
+    <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
+      <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
+        <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg>
+      </a>
 
+      <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+        <li><a href="#" class="nav-link px-2 link-secondary">Home</a></li>
+        <li><a href="#" class="nav-link px-2 link-dark">Features</a></li>
+        <li><a href="#" class="nav-link px-2 link-dark">Pricing</a></li>
+        <li><a href="#" class="nav-link px-2 link-dark">FAQs</a></li>
+        <li><a href="#" class="nav-link px-2 link-dark">About</a></li>
+      </ul>
+
+      <div class="col-md-3 text-end">
+        <button type="button" class="btn btn-outline-primary me-2">Login</button>
+        <button type="button" class="btn btn-primary">Sign-up</button>
+      </div>
+    </header>
+  </div>
 	<nav id="navbar" class="navbar {% if theme == 'dark' %} navbar-dark bg-dark {% else %} navbar-light bg-light {% endif %} navbar-static-top navbar-expand-md">
 		<div class="container">
-			<a class="navbar-brand" href="/"><img src="/assets/logo.png" alt="[sb]" height="32"
+			<a class="navbar-brand d-flex justify-content-md-center" href="/"><img src="/assets/logo.png" alt="[sb]" height="32"
 					class="d-inline-block align-text-top"></a>
-			<form class="d-flex" method="GET" action="search.php">
+			<!--<form class="d-flex flex-fill" method="GET" action="search.php">
 			<div class="input-group">
 				<input name="query" class="form-control" type="search" placeholder="{{ __("Search") }}"
 					aria-label="Search">
@@ -65,7 +83,7 @@
 					{{ icon('search', 20) }}
 				</button>
 			</div>
-			</form>
+			</form>-->
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
