--- a/templates/default/user.twig
+++ b/templates/default/user.twig
@@ -84,7 +84,7 @@
 					{% if subCount != 1 %}
 						{% set pluralSubscribers = __("s") %}
 					{% endif %}
-					<dt class="col-sm-4">{{ __("subscriber%s.", [pluralSubscribers]) }}</dt>
+					<dt class="col-sm-4">{{ __("Subscriber%s", [pluralSubscribers]) }}</dt>
 					<dd class="col-sm-8">{{ subCount }}</dd>
 				</dl>
 				</div>
