--- a/templates/default/login.twig
+++ b/templates/default/login.twig
@@ -29,7 +29,7 @@
 						</div>
 						<div class="d-grid gap-2 d-md-flex justify-content-between">
 						  <input class="btn btn-lg btn-primary flex-grow-1" type="submit" value="{{ __("Login") }}" name="loginsubmit">
-						  <a class="btn btn-lg btn-light" href="/">{{ __("Back") }}</a>
+						  <a class="btn btn-lg btn-secondary" href="/">{{ __("Back") }}</a>
 						</div>
 					</div>
 				</div>
