--- a/templates/default/register.twig
+++ b/templates/default/register.twig
@@ -41,7 +41,7 @@ register page should be merged with login page on sbnext
 		{% endif %}
 		<div class="d-grid gap-2 d-md-flex justify-content-between">
 			<input class="btn btn-lg btn-primary flex-grow-1" type="submit" value="{{ __("Register") }}" name="action">
-			<a class="btn btn-lg btn-light" href="/">{{ __("Back") }}</a>
+			<a class="btn btn-lg btn-secondary" href="/">{{ __("Back") }}</a>
 		</div>
 	</div>
 </div>
