--- a/bootstrap/bs-finalium-dark.scss
+++ b/bootstrap/bs-finalium-dark.scss
@@ -1,3 +1,3 @@
-@import "_variables-dark.scss";
+@import "_variables-finalium-dark.scss";
 @import "../vendor/twbs/bootstrap/scss/bootstrap.scss";
 @import "custom-finalium.scss";
