[Settings] Add display name setting

--- a/templates/default/_layout.twig
+++ b/templates/default/_layout.twig
@@ -59,7 +59,8 @@
 					class="d-inline-block align-text-top"></a>
 			<form class="d-flex" method="GET" action="search.php">
 			<div class="input-group">
-				{{ icon('search', 20) }} <input name="query" class="form-control" type="search" placeholder="{{ __("Search") }}"
+			        <span class="input-group-text" id="basic-addon1">{{ icon('search', 16 ) }}</span>
+				<input name="query" class="form-control" type="search" placeholder="{{ __("Search") }}"
 					aria-label="Search">
 			</div>
 			</form>
