--- a/templates/default/channels.twig
+++ b/templates/default/channels.twig
@@ -3,6 +3,7 @@
 {% block title %}{{ __("Browse") }}{% endblock %}
 
 	{% block content %}
+<div class="alert alert-primary">TODO: Redesign this to make it vertical</div>
 <div class="row"><div class="col">
 	<div class="card">
 		<div class="card-header bg-dark text-white">{{ __("Channels") }}</div>
