--- a/templates/default/components/browsevideobox.twig
+++ b/templates/default/components/browsevideobox.twig
@@ -13,7 +13,7 @@
 				{% if data.views != 1 %}
 					{% set pluralViews = __("s") %}
 				{% endif %}
-				<p>{{ userlink(data, 'u_') }} &bull; {{ data.views }} {{ __("view%s.", [pluralViews]) }} &bull;
+				<p>{{ userlink(data, 'u_') }} &bull; {{ data.views }} {{ __("view%s", [pluralViews]) }} &bull;
 				{{ data.time | relative_time }}</p>
 			</div>
 		</div>
