--- a/templates/default/index.twig
+++ b/templates/default/index.twig
@@ -58,8 +58,10 @@
 		{% endif %}
 		<hr/>
 		<h3>{{ __("News and updates") }}</h3>
-		<p>{{ __("After nearly 3 months of development after the reset, squareBracket has now entered beta.") }}</p>
-		<p class="blockquote-footer">{{ __("The squareBracket team") }}</p>
+		<h4>{{ __("In memory of Vlare") }}</h4>
+		<p>{{ __("That's right, no more VidLii 2.0 for you.") }}</p>
+		<h5 class="pb-3">{{ __("August 30th 2018 - July 26th 2021") }}</h5>
+		<p class="blockquote-footer">{{ __("Gamerappa") }}</p>
 		<hr/>
 		<h3>{{ __("Featured videos") }}</h3>
 		{% for video in featuredVideos %}
