Do you think I have the time to write this?

--- a/templates/default/register_displayname.twig
+++ b/templates/default/register_displayname.twig
@@ -43,7 +43,7 @@ register page should be merged with login page on sbnext
 			<div class="h-captcha" data-sitekey="{{ hcaptcha_sitekey }}"></div>
 		</div>
 		{% endif %}
-		<div class="d-grid gap-2 d-md-flex justify-content-between">
+		<div class="d-flex gap-2 justify-content-between">
 			<input class="btn btn-lg btn-primary flex-grow-1" type="submit" value="{{ __("Register") }}" name="action">
 			<a class="btn btn-lg btn-secondary" href="/">{{ __("Back") }}</a>
 		</div>
