--- a/templates/default/_layout.twig
+++ b/templates/default/_layout.twig
@@ -71,6 +71,7 @@
 				<ul class="navbar-nav me-auto mb-2 mb-lg-0"></ul>
 				<ul class="navbar-nav">
 					{% if logged_in %}
+					<div class="dropdown">
 						<li class="nav-item">
 							<a href="upload.php" class="nav-link">
 								<div class="d-flex align-items-center">
@@ -82,13 +83,14 @@
 								</div>
 							</a>
 						</li>
+					</div>
 					{% else %}
 					<div class="d-grid gap-2 d-md-block">
 						<a href="login.php" class="btn btn-primary me-md-1">{{ __("Login") }}</a>
 						<a href="register.php" class="btn btn-secondary">{{ __("Register") }}</a>
 					</div>
 					{% endif %}
-										<div class="dropdown">
+					<div class="dropdown">
 						<li class="nav-item">
 							<style>
 								#openSettings::after {
