--- a/templates/default/user_redesign.twig
+++ b/templates/default/user_redesign.twig
@@ -22,23 +22,19 @@
 	<div class="p-1 bg-custom-profile text-white">
 		<div class="container py-4">
 			<div class="row">
-				<div class="col-md-11">
-					<img class="float-start rounded me-3" src="{{ profile_image(user.username) }}" width="144" alt="pfp">
+				<div class="col-md-10">
+					<img class="float-start rounded me-3" src="{{ profile_image(user.username) }}" width="150" alt="pfp">
 					<h1 class="align-top fw-bold mb-0">
 						{{ user.display_name }}{% if user.u_flags == 1 %}<svg data-bs-toggle="tooltip"
 							data-bs-placement="top" title="{{ __("Checkmarked") }}"
 							style="margin-left: 0.75%;" class="bi" width="32" height="32" fill="currentColor">
 							<use xlink:href="vendor/twbs/bootstrap-icons/bootstrap-icons.svg#patch-check-fill" />
 						</svg>{% endif %}</h1>
-						<div class="font-monospace">@{{ user.username }}</div>
-					<p class="fs-4 text-break">{{ user.description }}</p>
+						<div class="fs-4">@{{ user.username }}</div>
+					<p class="fs-6 text-break">{{ user.description }}</p>
 				</div>
-				<div class="col-md-1 text-end">
-					<button id="subscribe" class="btn btn-{% if subscribed %}secondary{% else %}warning{% endif %}" type="button" {% if not logged_in or current_user.id == user.id %}disabled{% endif %}><svg data-bs-toggle="tooltip"
-							data-bs-placement="top" title="{% if subscribed %}{{ __("Unsubscribe") }}{% else %}{{ __("Subscribe") }}{% endif %}" style="margin-left: 0.75%;"
-							class="bi" width="32" height="32" fill="currentColor">
-							<use xlink:href="vendor/twbs/bootstrap-icons/bootstrap-icons.svg#{% if subscribed %}dash{% else %}plus{% endif %}" />
-						</svg></button>
+				<div class="col-md-2">
+					<button id="subscribe" class="btn btn-{% if subscribed %}secondary{% else %}warning{% endif %}" type="button" {% if not logged_in or current_user.id == user.id %}disabled{% endif %}>{% if subscribed %}{{ __("Unsubscribe") }}{% else %}{{ __("Subscribe") }}{% endif %}</button>
 				</div>
 			</div>
 		</div>
@@ -51,7 +47,7 @@
 	{% if edited %}
 	<div class="col-12">
 		<div class="alert alert-success alert-dismissible fade show" role="alert">
-			{{ __("Your profile settings were successfully updated.") }}
+			{{ __("Your profile has been successfully updated.") }}
 			<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 		</div>
 	</div>
@@ -97,7 +93,7 @@
 			{% if current_user.powerlevel > 2 %}
 			<div class="card mb-2">
 				<div class="card-body">			
-					<h4>{{ __("Administrator Actions") }}</h4>
+					<h4>{{ __("Administrative Actions") }}</h4>
 					<hr>
 					<dl class="row">
 						<a href="resetpassword.php?grf={{ user.id }}">{{ __("Generate password reset for %s", [user.username]) }}</a>
