[Forums] Creating threads is sort of possible.
Replying isn't possible for now, this will be done later.
Forums have been considered since the PokTube
days, with the original squareBracket forums
actually using myBB. But they were shutdown
after the development reset in April 2021.

--- a/templates/default/topic.twig
+++ b/templates/default/topic.twig
@@ -10,10 +10,11 @@
   <div class="card-body">
    <div class="row">
    	<div class="col-md-2">
-   	 {{ post_data.author }}
+   	{{ post_data.u_username }}
+	<img class="float-start rounded w-75" src="{{ profile_image(video.u_username) }}">
    	</div>
    	<div class="col-md-10">
-   	 {{ post_data.description }}
+   	 {{ post_data.content }}
    	</div>
     </div>
   </div>
