--- a/templates/default/_layout.twig
+++ b/templates/default/_layout.twig
@@ -5,13 +5,13 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	{% block head %}{% endblock %}
+	<!-- https://www.youtube.com/watch?v=BAG6Y7xe6BY -->
 	{% if theme != 'vanilla' %}
-	<link rel="stylesheet" id="bootstrap" href="assets/bs{% if theme == 'dark' %}-dark{% elseif theme == 'finalium' %}-finalium{% endif %}.css" type="text/css">
+	<link rel="stylesheet" id="bootstrap" href="assets/bs{% if theme == 'dark' %}-dark{% elseif theme == 'finalium' %}-finalium{% elseif theme == 'finalium-dark' %}-dark{% endif %}.css" type="text/css">
 	{% else %}
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" id="bootstrap">
 	{% endif %}
-	<script src="https://code.jquery.com/jquery-3.6.0.js"
-		integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
 	<script src="vendor/twbs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 	<script src="assets/common.js"></script>
@@ -53,7 +53,7 @@
   </div>
 </div>-->
 
-	<nav id="navbar" class="navbar {% if theme == 'dark' %} navbar-dark bg-dark {% else %} navbar-light bg-light {% endif %} navbar-static-top navbar-expand-md">
+	<nav id="navbar" class="navbar {% if theme == 'dark' or theme == 'finalium-dark' %} navbar-dark bg-dark {% else %} navbar-light bg-light {% endif %} navbar-static-top navbar-expand-md">
 		<div class="container">
 			<a class="navbar-brand" href="/"><img src="/assets/logo.png" alt="[sb]" height="32"
 					class="d-inline-block align-text-top"></a>
@@ -121,10 +121,10 @@
 						</ul>
 						<ul class="dropdown-menu" id="themeSelection" aria-labelledby="navbarDropdown">
 							<li><a class="dropdown-item" id="back" href="#">{{ __("Back") }}</a></li>
-							<li><a class="dropdown-item" id="finalium" href="#">{{ __("Finalium Light") }}</a></li>
-							<li><a class="dropdown-item" id="finalium-dark" href="#">{{ __("Finalium Dark") }}</a></li>
-							<li><a class="dropdown-item" id="light" href="#">{{ __("Light") }}</a></li>
-							<li><a class="dropdown-item" id="dark" href="#">{{ __("Dark") }}</a></li>
+							<li><a class="dropdown-item" id="finalium" href="#">{{ __("Light") }}</a></li>
+							<li><a class="dropdown-item" id="finalium-dark" href="#">{{ __("Dark") }}</a></li>
+							<li><a class="dropdown-item" id="light" href="#">{{ __("Classic Light") }}</a></li>
+							<li><a class="dropdown-item" id="dark" href="#">{{ __("Classic Dark") }}</a></li>
 							<li><a class="dropdown-item" id="vanilla" href="#">{{ __("Bootstrap") }}</a></li>
 						</ul>
 					</div>
@@ -157,12 +157,13 @@
 			<div class="card-body">
 			<h4 class="my-0">squareBracket Beta 1</h4>
 			<!-- 2020 was when work on PokTube (the predecessor of squareBracket) was started. Techically, PokTube and squareBracket are the same project, just with different codebases. -gr 7/20/2021 -->
-			<p class="my-0"><b>{{ __("By squareBracket contributors") }}</b> · 2020-{{ 'now' | date('Y') }} | <b>{{ __("Users registered") }}</b>: {{ stats.usercount }} | <b>{{ __("Videos uploaded") }}</b>: {{ stats.videocount }}</p>
+			<p class="my-0"><b>{{ __("By the squareBracket contributors") }}</b> · 2020-{{ 'now' | date('Y') }} | <b>{{ __("Users registered") }}</b>: {{ stats.usercount }} | <b>{{ __("Videos uploaded") }}</b>: {{ stats.videocount }}</p>
 			<p class="my-0"><a href="about.php" class="me-1">{{ __("About") }}</a> <a class="me-1">{{ __("Terms") }}</a> <a class="me-1">{{ __("Guidelines") }}</a> <a class="me-1">{{ __("Contact") }}</a></p>
 			</div>
 			</div>
 		</footer>
 	{% block postcontent %}{% endblock %}
+<!-- gamerappa killed the bazinga star -->
 	</div>
 </body>
 </html>
