--- a/templates/default/index.twig
+++ b/templates/default/index.twig
@@ -38,10 +38,10 @@
 	</div>
 	<div class="col-xl-4">
 		{% if logged_in %}
-			<h3>{{ __("Hi there, %s", [current_user.username]) }}</h3>
 			</p>
-				<img class="float-end rounded w-25" src="{{ profile_image(current_user.username) }}"  alt="pfp">
-				<p class="text-start float-start">
+				<img class="float-start rounded w-25 me-3" src="{{ profile_image(current_user.username) }}"  alt="pfp">
+				<p class="text-start float-end">
+				<h3>{{ current_user.display_name }}</h3>
 					{# hack to prevent twig from outputing the number 1 #}
 					{% if totalSubscribers != 1 %}
 						{% set pluralSubscribers = __("s") %}
@@ -49,6 +49,7 @@
 					{% if totalViews != 1 %}
 						{% set pluralViews = __("s") %}
 					{% endif %}
+					<p class="fs-5">@{{ current_user.username }}</p><br><br>
 					<p class="mb-2">{{ __("You have %s subscriber%s.", [totalSubscribers ?? __("no"), pluralSubscribers]) }}</p>
 					<p class="mb-2">{{ __("You have %s view%s.", [totalViews ?? __("no"), pluralViews]) }}</p>
 					<p class="mb-5">{{ __("Your account was made %s.", [creationDate | relative_time]) }}</p>
