[Finalium] Make gradient lighter.

--- a/bootstrap/_variables-finalium-dark.scss
+++ b/bootstrap/_variables-finalium-dark.scss
@@ -171,6 +171,10 @@ $btn-close-hover-opacity:    1 !default;
 
 $pre-color:                         inherit !default;
 
+// Image
+
+$thumbnail-bg: $white;
+
 $container-max-widths: (
   sm: 540px,
   md: 720px,
