--- a/bootstrap/_variables-finalium.scss
+++ b/bootstrap/_variables-finalium.scss
@@ -40,6 +40,7 @@ $alert-bg-scale: 0%;
 $alert-padding-y: 0.75rem;
 $alert-padding-x: 1.25rem;
 $gradient: linear-gradient(180deg, rgba($white, .15), rgba($white, 0));
+$thumbnail-bg: $white;
 
 $container-max-widths: (
   sm: 540px,
