--- a/bootstrap/_variables-finalium-dark.scss
+++ b/bootstrap/_variables-finalium-dark.scss
@@ -71,7 +71,9 @@ $table-bg-scale:              0 !default;
 
 // Forms
 
-$input-color:                       $gray-800 !default;
+$input-bg:                          $gray-800 !default;
+$input-disabled-bg:     darken($gray-900, 5%) !default;
+$input-color:                       $white !default;
 $input-border-color:                $body-bg !default;
 $input-group-addon-color:           $gray-500 !default;
 $input-group-addon-bg:              $gray-700 !default;
