allow changing of display name

--- a/templates/default/_layout.twig
+++ b/templates/default/_layout.twig
@@ -7,7 +7,7 @@
 	{% block head %}{% endblock %}
 	<!-- https://www.youtube.com/watch?v=BAG6Y7xe6BY -->
 	{% if theme != 'vanilla' %}
-	<link rel="stylesheet" id="bootstrap" href="assets/bs{% if theme == 'dark' %}-dark{% elseif theme == 'finalium' %}-finalium{% elseif theme == 'finalium-dark' %}-dark{% endif %}.css" type="text/css">
+	<link rel="stylesheet" id="bootstrap" href="assets/bs{% if theme == 'dark' %}-dark{% elseif theme == 'finalium' %}-finalium{% elseif theme == 'finalium-dark' %}-finalium-dark{% endif %}.css" type="text/css">
 	{% else %}
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" id="bootstrap">
 	{% endif %}
