--- a/templates/default/settings_redesign.twig
+++ b/templates/default/settings_redesign.twig
@@ -72,7 +72,7 @@
 				<br>
 					<form action="settings.php" method="post" enctype="multipart/form-data">
 					<label for="inputDisplayName" class="form-label">Display Name</label>
-					<input id="inputDisplayName" class="form-control">
+					<input id="inputDisplayName" class="form-control" name="displayName">
 					<h3>{{ __("Profile picture") }}</h3>
 					<div class="row">
 						<div class="col-10">
