--- a/bootstrap/_variables-finalium-dark.scss
+++ b/bootstrap/_variables-finalium-dark.scss
@@ -8,27 +8,27 @@ $theme: "darkly" !default;
 //
 
 $white:    #fff !default;
-$gray-100: #f8f9fa !default;
-$gray-200: #ebebeb !default;
-$gray-300: #dee2e6 !default;
-$gray-400: #ced4da !default;
-$gray-500: #adb5bd !default;
-$gray-600: #888 !default;
-$gray-700: #444 !default;
-$gray-800: #303030 !default;
-$gray-900: #222 !default;
+$gray-100: #c8defa !default;
+$gray-200: #b3b3b3 !default;
+$gray-300: #dbdbdb !default;
+$gray-400: #a7aaaf !default;
+$gray-500: #7a8899 !default;
+$gray-600: #667180 !default;
+$gray-700: #525b66 !default;
+$gray-800: #333940 !default;
+$gray-900: #292d33 !default;
 $black:    #000 !default;
 
-$blue:    #375a7f !default;
-$indigo:  #6610f2 !default;
-$purple:  #6f42c1 !default;
-$pink:    #e83e8c !default;
-$red:     #e74c3c !default;
-$orange:  #ed8b13 !default;
-$yellow:  #ffc32b !default;
-$green:   #00bc8c !default;
-$teal:    #20c997 !default;
-$cyan:    #3498db !default;
+$blue:    #246996 !default;
+$indigo:  #3331ad !default;
+$purple:  #613ca3 !default;
+$pink:    #b34d7b !default;
+$red:     #bf3939 !default;
+$orange:  #d18930 !default;
+$yellow:  #d1a330 !default;
+$green:   #4aab20 !default;
+$teal:    #1da188 !default;
+$cyan:    #2f97ba !default;
 
 $primary:       $blue !default;
 $secondary:     $gray-700 !default;
@@ -36,7 +36,7 @@ $success:       $green !default;
 $info:          $cyan !default;
 $warning:       $yellow !default;
 $danger:        $red !default;
-$light:         $gray-500 !default;
+$light:         $gray-200 !default;
 $dark:          $gray-800 !default;
 
 $min-contrast-ratio:   1.50 !default;
