--- a/bootstrap/_variables-finalium-dark.scss
+++ b/bootstrap/_variables-finalium-dark.scss
@@ -112,11 +112,11 @@ $navbar-light-toggler-border-color: rgba($gray-900, .1) !default;
 // Pagination
 
 $pagination-color:                  $white !default;
-$pagination-bg:                     $success !default;
+$pagination-bg:                     $primary !default;
 $pagination-border-width:           0 !default;
 $pagination-border-color:           transparent !default;
 $pagination-hover-color:            $white !default;
-$pagination-hover-bg:               lighten($success, 10%) !default;
+$pagination-hover-bg:               lighten($primary, 10%) !default;
 $pagination-hover-border-color:     transparent !default;
 $pagination-active-bg:              $pagination-hover-bg !default;
 $pagination-active-border-color:    transparent !default;
