--- a/templates/default/settings_redesign.twig
+++ b/templates/default/settings_redesign.twig
@@ -71,8 +71,8 @@
 				</div>
 				<br>
 					<form action="settings.php" method="post" enctype="multipart/form-data">
-					<label for="inputDisplayName" class="form-label">Display Name</label>
-					<input id="inputDisplayName" class="form-control" name="displayName">
+					<label for="displayName" class="form-label">Display Name</label>
+					<input id="displayName" class="form-control" name="displayName">
 					<h3>{{ __("Profile picture") }}</h3>
 					<div class="row">
 						<div class="col-10">
