--- a/templates/default/_layout-admin.twig
+++ b/templates/default/_layout-admin.twig
@@ -97,7 +97,7 @@
 	<main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
 		{% block content %}{% endblock %}
 		<footer class="text-center pt-3 my-2 text-muted border-top">
-			<h4 class="mb-2">squareBracket Pre-Beta</h4>
+			<h4 class="mb-2">squareBracket</h4>
 				{{ __("By squareBracket contributors") }} · 2020-{{ 'now' | date('Y') }}
 			<br><br>
 			{% for menu_link in menu_links %}
