--- a/templates/default/_layout.twig
+++ b/templates/default/_layout.twig
@@ -29,7 +29,7 @@
 	<meta name="msapplication-TileColor" content="#2d89ef">
 	<meta name="msapplication-TileImage" content="/mstile-144x144.png">
 	<meta name="theme-color" content="#0065d8">
-	<title>{% block title %}{% endblock %} - squareBracket</title>
+	<title>{% block title %}{% endblock %} - squareBracket Beta 1.1</title>
 </head>
 <style>
 	.bi {
@@ -155,7 +155,7 @@
 			<div class="container">
 			<div class="card">
 			<div class="card-body">
-			<h4 class="my-0">squareBracket Beta 1</h4>
+			<h4 class="my-0">squareBracket Beta 1.1</h4>
 			<!-- 2020 was when work on PokTube (the predecessor of squareBracket) was started. Techically, PokTube and squareBracket are the same project, just with different codebases. -gr 7/20/2021 -->
 			<p class="my-0"><b>{{ __("By the squareBracket contributors") }}</b> · 2020-{{ 'now' | date('Y') }} | <b>{{ __("Users registered") }}</b>: {{ stats.usercount }} | <b>{{ __("Videos uploaded") }}</b>: {{ stats.videocount }}</p>
 			<p class="my-0"><a href="about.php" class="me-1">{{ __("About") }}</a> <a class="me-1">{{ __("Terms") }}</a> <a class="me-1">{{ __("Guidelines") }}</a> <a class="me-1">{{ __("Contact") }}</a></p>
