--- a/bootstrap/_variables-finalium.scss
+++ b/bootstrap/_variables-finalium.scss
@@ -26,6 +26,9 @@ $gray-800: #393939;
 $gray-900: #242424;
 $light: #f8f9fa;
 $dark: #343a40;
+$indigo-color:	$indigo;
+$teal-color:	$teal;
+$orange-color:	$orange;
 $secondary: $gray-200;
 $font-family-sans-serif: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 $font-size-base: 0.875rem;
@@ -72,6 +75,9 @@ $theme-colors: (
   "danger":     $danger,
   "light":      $light,
   "dark":       $dark,
+  "violet":     $indigo-color,
+  "pale-green": $teal-color,
+  "carrot": $orange-color,
 );
 
 $min-contrast-ratio:   1.50 !default;
