--- a/bootstrap/_variables.scss
+++ b/bootstrap/_variables.scss
@@ -22,7 +22,6 @@ $yellow: #ebbc15;
 $cyan: #16b6f5;
 $blue: #2b68ad;
 $green: #147a3a;
-$poktube-blue: #0051b3;
 $teal: #20c997;
 $dark: $gray-800;
 $enable-responsive-font-sizes: true;
@@ -40,6 +39,9 @@ $h4-font-size: $font-size-base * 1.25;
 $h5-font-size: $font-size-base;
 $h6-font-size: $font-size-base * 0.85;
 $body-bg: #e9eaec;
+$indigo-color:	$indigo;
+$teal-color:	$teal;
+$orange-color:	$orange;
 
 $min-contrast-ratio:   1.50 !default;
 
@@ -52,5 +54,7 @@ $theme-colors: (
   "danger":     $danger,
   "light":      $light,
   "dark":       $dark,
-  "poktube":    $poktube-blue,
+  "violet":     $indigo-color,
+  "pale-green": $teal-color,
+  "carrot": $orange-color,
 );
