--- a/templates/default/_layout.twig
+++ b/templates/default/_layout.twig
@@ -6,10 +6,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	{% block head %}{% endblock %}
 	<!-- https://www.youtube.com/watch?v=BAG6Y7xe6BY -->
+	<!-- REDO THIS REDO THIS REDO THIS REDO THIS -->
 	{% if theme != 'vanilla' %}
 	<link rel="stylesheet" id="bootstrap" href="assets/bs{% if theme == 'dark' %}-dark{% elseif theme == 'finalium' %}-finalium{% elseif theme == 'finalium-dark' %}-finalium-dark{% endif %}.css" type="text/css">
 	{% else %}
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" id="bootstrap">
+	<link href="assets/bs-vanilla.css" rel="stylesheet" id="bootstrap">
 	{% endif %}
 	<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
