--- a/bootstrap/bs.scss
+++ b/bootstrap/bs.scss
@@ -1,2 +1,3 @@
-@import "_variables-vanilla.scss";
+@import "_variables.scss";
 @import "../vendor/twbs/bootstrap/scss/bootstrap.scss";
+@import "custom.scss";
